--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -36,6 +36,10 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  /* Light mode text color */
+  --text-light: #11224E;
+  /* Dark mode text color */
+  --text-dark: #e9e5ff;
 }
 
 @theme inline {
@@ -135,4 +139,8 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+}
+
+* {
+  animation-duration: .3s;
 }
