--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -40,6 +40,8 @@
   --text-light: #11224E;
   /* Dark mode text color */
   --text-dark: #e9e5ff;
+
+
 }
 
 @theme inline {
@@ -83,6 +85,8 @@
   --radius-2xl: calc(var(--radius) + 8px);
   --radius-3xl: calc(var(--radius) + 12px);
   --radius-4xl: calc(var(--radius) + 16px);
+
+
 }
 
 /* Allow manual theme switching via html.dark */
@@ -136,11 +140,12 @@ body {
     @apply border-border outline-ring/50;
   }
 
+  html.theme-transition,
+  html.theme-transition * {
+    transition: background-color 1s ease 1.5s, color 1s ease 1.5s, border-color 1s ease 1.5s !important;
+  }
+
   body {
     @apply bg-background text-foreground;
   }
-}
-
-* {
-  animation-duration: .3s;
 }
